feedback updates
- grammar parsing test with add and set combinations
- dynamodb add/set tests
- restricts `add` in an update expression for hash partitioning when the index field is part of the key